# koten-text-refiner

./: .gitignore  README.md  pyproject.toml
configs/: corrector.yaml  corrector_smoke.yaml  detector.yaml  detector_smoke.yaml  edit_only.yaml  gemma4_31b_it_qlora.yaml  gemma4_e4b_it_qlora.yaml  gpt-oss-20b.yaml
docs/: qwen35_koten_ocr_plan.md
src/koten_refiner/: alignment.py  cli.py  dataset_builder.py  detector_evaluation.py  evaluation.py  inference.py  metrics.py  models.py  prompts.py  train.py
tests/: test_alignment.py  test_cli.py  test_dataset_builder.py  test_evaluation.py  test_inference.py  test_train.py
